kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scytale-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - api.scytale.pro
        - aha.scytale.pro
      secretName: scytale-tls
  rules:
    - host: "api.scytale.pro"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-service
                port:
                  number: 3020
    - host: "aha.scytale.pro"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: aha-ai-demo
                port:
                  number: 3000
